DeployCSXLab/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.4.1272.37030",
      "templateHash": "12456656922606116364"
    }
  },
  "parameters": {
    "virtualMachines_VM_CSX_TP_LINUX_name": {
      "type": "string",
      "defaultValue": "VM-CSX-TP-LINUX"
    },
    "virtualMachines_VM_CSX_TP_SERVER_name": {
      "type": "string",
      "defaultValue": "VM-CSX-TP-SERVER"
    },
    "virtualMachines_VM_CSX_TP_WINDOWS_name": {
      "type": "string",
      "defaultValue": "VM-CSX-TP-WINDOWS"
    },
    "networkSecurityGroups_all_CSX_TP_nsg_name": {
      "type": "string",
      "defaultValue": "all-CSX-TP-nsg"
    },
    "location": {
      "type": "string",
      "defaultValue": "francecentral"
    }
  },
  "variables": {
    "networkInterfaces_vm_csx_tp_linux829_name": "vm-csx-tp-linux829",
    "publicIPAddresses_VM_CSX_TP_LINUX_ip_name": "VM-CSX-TP-LINUX-ip",
    "virtualNetworks_RG_CSX_TP_Admin_vnet_name": "RG_CSX_TP_Admin-vnet",
    "networkInterfaces_vm_csx_tp_server611_name": "vm-csx-tp-server611",
    "publicIPAddresses_VM_CSX_TP_SERVER_ip_name": "VM-CSX-TP-SERVER-ip",
    "networkInterfaces_vm_csx_tp_windows619_name": "vm-csx-tp-windows619",
    "publicIPAddresses_VM_CSX_TP_WINDOWS_ip_name": "VM-CSX-TP-WINDOWS-ip"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "name": "[parameters('networkSecurityGroups_all_CSX_TP_nsg_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "endDate": "31/12/2022",
        "approver": "Jean-Baptiste Favrot"
      },
      "properties": {
        "securityRules": [
          {
            "name": "AllowRDP-VM-Windows_Port_3389",
            "properties": {
              "description": "Allow ALL inbound traffic\n- To VM-CSX-TP-WINDOWS\n- Via RDP on port 3389",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "10.0.0.5",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowSSH-VM-Linux_Port_22",
            "properties": {
              "description": "Allow ALL inbound traffic \n- To VM-CSX-TP-LINUX\n- Via SSH on port 22",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "10.0.0.4",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowSSH-VM-Linux-TO-VM-Server",
            "properties": {
              "description": "Allow outbound traffic \n- To VM-CSX-TP-SERVER\n- From VM-CSX-TP-LINUX\n- Via SSH port 22",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "10.0.0.6",
              "destinationAddressPrefix": "10.0.0.4",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowSSH-VM-Server-FROM-VM-Linux",
            "properties": {
              "description": "Allow outbound traffic \n- To VM-CSX-TP-SERVER\n- From VM-CSX-TP-LINUX\n- Via SSH port 22",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "10.0.0.4",
              "destinationAddressPrefix": "10.0.0.6",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-11-01",
      "name": "[variables('publicIPAddresses_VM_CSX_TP_LINUX_ip_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-11-01",
      "name": "[variables('publicIPAddresses_VM_CSX_TP_SERVER_ip_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-11-01",
      "name": "[variables('publicIPAddresses_VM_CSX_TP_WINDOWS_ip_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-11-01",
      "name": "[parameters('virtualMachines_VM_CSX_TP_LINUX_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "plan": {
        "name": "ubuntu-server-18-04-minimal",
        "product": "ubuntu-server-18-04-minimal",
        "publisher": "tidalmediainc"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "tidalmediainc",
            "offer": "ubuntu-server-18-04-minimal",
            "sku": "ubuntu-server-18-04-minimal",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[format('{0}_OsDisk_1_b67f0110e83243faba246696c0b67bf2', parameters('virtualMachines_VM_CSX_TP_LINUX_name'))]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', format('{0}_OsDisk_1_b67f0110e83243faba246696c0b67bf2', parameters('virtualMachines_VM_CSX_TP_LINUX_name')))]"
            },
            "deleteOption": "Delete"
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_VM_CSX_TP_LINUX_name')]",
          "adminUsername": "VM-TP-CSX-LINUX-user",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "provisionVMAgent": true,
            "patchSettings": {
              "patchMode": "ImageDefault",
              "assessmentMode": "ImageDefault"
            }
          },
          "secrets": [],
          "allowExtensionOperations": true,
          "requireGuestProvisionSignal": true
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_vm_csx_tp_linux829_name'))]",
              "properties": {
                "deleteOption": "Detach"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_vm_csx_tp_linux829_name'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-11-01",
      "name": "[parameters('virtualMachines_VM_CSX_TP_SERVER_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "plan": {
        "name": "ubuntu-server-18-04-minimal",
        "product": "ubuntu-server-18-04-minimal",
        "publisher": "tidalmediainc"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "tidalmediainc",
            "offer": "ubuntu-server-18-04-minimal",
            "sku": "ubuntu-server-18-04-minimal",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[format('{0}_disk1_1096ccff905441238d3e13b8357b5251', parameters('virtualMachines_VM_CSX_TP_SERVER_name'))]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', format('{0}_disk1_1096ccff905441238d3e13b8357b5251', parameters('virtualMachines_VM_CSX_TP_SERVER_name')))]"
            },
            "deleteOption": "Delete"
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_VM_CSX_TP_SERVER_name')]",
          "adminUsername": "VM-TP-CSX-SRV-user",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "provisionVMAgent": true,
            "patchSettings": {
              "patchMode": "ImageDefault",
              "assessmentMode": "ImageDefault"
            }
          },
          "secrets": [],
          "allowExtensionOperations": true,
          "requireGuestProvisionSignal": true
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_vm_csx_tp_server611_name'))]",
              "properties": {
                "deleteOption": "Detach"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_vm_csx_tp_server611_name'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-11-01",
      "name": "[parameters('virtualMachines_VM_CSX_TP_WINDOWS_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2019-datacenter-gensecond",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Windows",
            "name": "[format('{0}_OsDisk_1_f364402b1530458f880c786b36c4e6e4', parameters('virtualMachines_VM_CSX_TP_WINDOWS_name'))]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', format('{0}_OsDisk_1_f364402b1530458f880c786b36c4e6e4', parameters('virtualMachines_VM_CSX_TP_WINDOWS_name')))]"
            },
            "deleteOption": "Delete"
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "VM-CSX-TP-WINDO",
          "adminUsername": "VM-TP-CSX-WDS-user",
          "windowsConfiguration": {
            "provisionVMAgent": true,
            "enableAutomaticUpdates": true,
            "patchSettings": {
              "patchMode": "AutomaticByOS",
              "assessmentMode": "ImageDefault",
              "enableHotpatching": false
            }
          },
          "secrets": [],
          "allowExtensionOperations": true,
          "requireGuestProvisionSignal": true
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_vm_csx_tp_windows619_name'))]",
              "properties": {
                "deleteOption": "Detach"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_vm_csx_tp_windows619_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'), 'AllowRDP-VM-Windows_Port_3389')]",
      "properties": {
        "description": "Allow ALL inbound traffic\n- To VM-CSX-TP-WINDOWS\n- Via RDP on port 3389",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "10.0.0.5",
        "access": "Allow",
        "priority": 100,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'), 'AllowSSH-VM-Linux_Port_22')]",
      "properties": {
        "description": "Allow ALL inbound traffic \n- To VM-CSX-TP-LINUX\n- Via SSH on port 22",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "10.0.0.4",
        "access": "Allow",
        "priority": 110,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'), 'AllowSSH-VM-Linux-TO-VM-Server')]",
      "properties": {
        "description": "Allow outbound traffic \n- To VM-CSX-TP-SERVER\n- From VM-CSX-TP-LINUX\n- Via SSH port 22",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "10.0.0.6",
        "destinationAddressPrefix": "10.0.0.4",
        "access": "Allow",
        "priority": 140,
        "direction": "Outbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'), 'AllowSSH-VM-Server-FROM-VM-Linux')]",
      "properties": {
        "description": "Allow outbound traffic \n- To VM-CSX-TP-SERVER\n- From VM-CSX-TP-LINUX\n- Via SSH port 22",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "10.0.0.4",
        "destinationAddressPrefix": "10.0.0.6",
        "access": "Allow",
        "priority": 150,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-11-01",
      "name": "[variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
              },
              "delegations": [],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            }
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]",
      "properties": {
        "addressPrefix": "10.0.0.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
        },
        "delegations": [],
        "privateEndpointNetworkPolicies": "Enabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-11-01",
      "name": "[variables('networkInterfaces_vm_csx_tp_linux829_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "10.0.0.4",
              "privateIPAllocationMethod": "Static",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_LINUX_ip_name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_LINUX_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-11-01",
      "name": "[variables('networkInterfaces_vm_csx_tp_server611_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "10.0.0.6",
              "privateIPAllocationMethod": "Static",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_SERVER_ip_name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_SERVER_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-11-01",
      "name": "[variables('networkInterfaces_vm_csx_tp_windows619_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "Audrey Fournies",
        "approver": "Jean-Baptiste Favrot",
        "endDate": "31/12/2022"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "10.0.0.5",
              "privateIPAllocationMethod": "Static",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_WINDOWS_ip_name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": true,
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_all_CSX_TP_nsg_name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_WINDOWS_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_RG_CSX_TP_Admin_vnet_name'), 'default')]"
      ]
    }
  ],
  "outputs": {
    "VM_CSX_TP_LINUX_IP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_LINUX_ip_name'))).ipAddress]"
    },
    "VM_CSX_TP_WINDOWS_IP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_WINDOWS_ip_name'))).ipAddress]"
    },
    "VM_CSX_TP_LINUX_SERVER_IP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_VM_CSX_TP_SERVER_ip_name'))).ipAddress]"
    }
  }
}
